<resources>
    <string name="app_name">QrAdventure</string>
    <string name="navi_profile">Profile</string>
    <string name="navi_scan">Scan</string>
    <string name="navi_leaderboard">Leaderboard</string>
    <string name="navi_map">Map</string>
    <string name="highest_score_header">Highest</string>
    <string name="lowest_score_header">Lowest</string>
    <string name="total_score_header">Total</string>
    <string name="username">Username</string>
    <string name="default_high_low_val">N/A</string>
    <string name="default_total_val">0</string>
    <string name="default_count_val">0</string>
    <string name="default_sort_button">Ʌ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchPrompt">Search:</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="title">Act Now Think Later</string>
    <string name="commentPrompt">Tap to see comments</string>
    <string name="comment_prompt">Add a comment</string>
</resources>